--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: pedantics
 Type: Package
 Title: Functions to Facilitate Power and Sensitivity Analyses for
         Genetic Studies of Natural Populations
-Version: 1.7
-Date: 2018-04-18
+Version: 1.7.1
+Date: 2023-05-15
 Depends: 
     R (>= 2.10),
     MCMCglmm,
@@ -16,8 +16,8 @@ Maintainer: Michael Morrissey <michael.morrissey@st-andrews.ac.uk>
 Description: Functions for sensitivity and power analysis, for calculating statistics describing pedigrees from wild populations, and for viewing pedigrees.
 License: GPL-2 | GPL-3
 LazyLoad: yes
-Packaged: 2018-04-18 11:47:06 UTC; michael
+Packaged:  2023-05-15 14:23:57 UTC; Julien Martin
 Repository: CRAN
-Date/Publication: 2018-04-18 14:23:57 UTC
+Date/Publication: 2023-05-15 14:23:57 UTC
 NeedsCompilation: yes
 LazyData: true
